ingress/agic-host-based/agic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-agic-ingress
  namespace: akkc

spec:
  ingressClassName: azure-application-gateway

  rules:
    - host: theakkc.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akkc-service
                port:
                  number: 80

    - host: email.theakkc.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: email-service
                port:
                  number: 80

    - host: support.theakkc.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: support-service
                port:
                  number: 80
